Replaces toolbar overflow workaround with fix. Adds improved shadow for buttons.

--- a/src/directives/templates/styles/_mmsFooter.scss
+++ b/src/directives/templates/styles/_mmsFooter.scss
@@ -10,7 +10,7 @@
   text-align: center;
   z-index: -1000;
   cursor: default;
-  bottom: -11px;
+  bottom: -12px;
   padding-top: 1px;
 }
 
